plugins {
    id "java"
    id "xyz.wagyourtail.unimined" version "1.4.+"
    id "com.gradleup.shadow" version "8.+"
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

base.archivesName = project.archives_base_name
version = "${project.mod_version}+mc${project.minecraft_version}"
group = project.maven_group

unimined.minecraft {
    version("${project.minecraft_version}")

    mappings {
        calamus()
        feather(31)

        stubs(["searge", "feather"]) {
            c(["net/minecraft/entity/item/EntityMinecart"]) {
                // fix conflict with forge added function name
                m("func_174898_m;()D", "getMaxSpeedVanilla")
            }
        }

        devNamespace("feather")
    }

    minecraftForge {
        loader forge_version
    }

    defaultRemapJar = true
}

repositories {
    maven { url = "https://jitpack.io" }
    maven { url = 'https://repo.runelite.net/' }
}

dependencies {
    implementation("com.github.VM-Chinese-translate-group:VMTULibraries:${project.core_version}")
    shadow("com.github.VM-Chinese-translate-group:VMTULibraries:${project.core_version}")
    shadow("net.runelite.archive-patcher:archive-patcher-applier:1.2")
}

processResources {
    inputs.property "version", project.version
    inputs.property "mc_version", project.minecraft_version

    filesMatching("mcmod.info") {
        expand "version": project.version, "mc_version": project.minecraft_version
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    //options.release = 8
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    withSourcesJar()
}

shadowJar {
    //relocate("top.vmctcn.vmtu.core", "vmtu.include.core")
    relocate("com.google.archivepatcher", "include.com.google.archivepatcher")

    archiveClassifier.set("dev-shadow")
}

remapJar {
    inputFile.set(shadowJar.archiveFile)
    dependsOn shadowJar
    archiveClassifier.set(null)
}

jar {
    archiveClassifier.set("dev")
}

processResources.dependsOn("convertLangFile")
tasks.register("convertLangFile", Exec) {
    commandLine("python", "scripts/json2lang.py", "scripts/inputs", "-o", "src/main/resources/assets/vmtranslationupdate/lang")
    workingDir projectDir
}

publishMods {
    displayName = "[Forge]${project.version}"
    changelog = file("CHANGELOG.md").getText()
    type = STABLE
    file = remapJar.archiveFile
    modLoaders.add("forge")

    curseforge {
        projectId = "${project.curseforge_id}"
        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
        minecraftVersions.add("1.12.2")
        clientRequired = true
    }

    modrinth {
        projectId = "${project.modrinth_id}"
        accessToken = providers.environmentVariable("MODRINTH_TOKEN")
        minecraftVersions.add("1.12.2")
    }
}
